#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-07
2013-03-13 Mikhail S. Dubrovin
- for CSPad2x2CalibPars return backward compatible method containing std::string m_str_src in order to run test/ex_cspad2x2_calib_pars.cpp

Tag: V00-01-06
2013-03-13 Mikhail S. Dubrovin
- in CSPadCalibPars and CSPad2x2CalibPars std::string m_str_src -> Pds::Src m_src;

Tag: V00-01-05
2013-03-08 Mikhail S. Dubrovin
- add CSPad2x2CalibPars and example in test/ex_cspad2x2_calib_pars.cpp

Tag: V00-01-04
2013-03-01 Mikhail S. Dubrovin
- in CSPadCalibPars add beam_vector and beam_intersect types
- add default constants in default constructor for all types.
	
Tag: V00-01-03
2012-05-10 Mikhail S. Dubrovin
- in CSPadCalibPars.cpp 
  Add warning message and abort() if the calibration file is not found.
  DEFAULT CONSTANTS ARE NOT PROVIDED YET !!!!!!!!!!!!!!!!! IN MY TO DO LIST....
	
Tag: V00-01-02
2012-05-01 Andy Salnikov
- upgrading to boost 1.49.0, some return types have changed in 
  boost::filesystem

Tag: V00-01-01
2012-03-17 Mikhail S. Dubrovin
- in CSPadCalibPars.cpp the printout is commented
	
Tag: V00-01-00
2011-10-04 Andy Salnikov
- in CalibFileFinder class moved source argument to findCalibFile()
  method instead of constructor, more convenient for use.
- added exceptions classes, exception is thrown when somebody passes
  source address which is not DetInfo

Tag: V00-00-05
2011-09-01 Andy Salnikov
- pass run number to CalibFileFinder::findCalibFile() method by
  value instead of by reference

Tag: V00-00-04
2011-08-09 Mikhail S. Dubrovin
- change float -> double

Tag: V00-00-03
2011-08-08 Andy Salnikov